--- a/effective_software-bar_dona_chela/site_media/html/templates/home/home.html
+++ b/effective_software-bar_dona_chela/site_media/html/templates/home/home.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<!--Page Title Tag and Meta data  -->
-	<title>home</title>
+	<title>Home</title>
 	  <meta charset="utf-8">
 	  <!--Cambio de metas para SEO web-->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
